# UsrLinuxEmu

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  roadmap.md  run_cli.sh
.github/: copilot-instructions.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: ADR-015-gpu-ioctl-unification.md  ADR-016-gpu-memory-domain.md  ADR-017-gpfifo-queue-abstraction.md  ADR.md  CHANGELOG.md  Doxyfile  PRD.md  README.md  ROADMAP.md  api_reference.md  architecture.md  build_system.md  development_guide.md  development_implementation_plan.md  gpu_driver_architecture.md  linux_driver_compatibility_test_plan.md  overview.md  sync-plan.md  testing_guide.md
drivers/: CMakeLists.txt  plugin_sample_gpu.cpp  sample_gpu.cpp  sample_gpu.h  sample_memory.cpp  sample_memory.h  sample_memory_plugin.cpp  sample_serial.cpp  sample_serial.h
drivers/gpu/: CMakeLists.txt  address_space.cpp  address_space.h  buddy_allocator.cpp  buddy_allocator.h  gpu_command_packet.h  gpu_driver.cpp  gpu_driver.h  ioctl_gpgpu.h  plugin_gpu.cpp  ring_buffer.cpp  ring_buffer.h
drivers/net_compat/: net_compat.h  net_compat_test.c
libgpu_core/: CMakeLists.txt
libgpu_core/include/: gpu_buddy.h
libgpu_core/src/: buddy.c
libgpu_core/test/: test_buddy.c
plans/: README.md  gpu_driver_portability_plan.md  linux_compat_plan.md  master_plan_2026.md  phase0_env_setup.md  sync-plan.md  umq-implementation-plan.md
plugins/: CMakeLists.txt  Makefile  plugins.json
plugins/gpu_driver/: CMakeLists.txt  plugin.cpp
plugins/gpu_driver/drv/: CMakeLists.txt  gpgpu_device.cpp  gpgpu_device.h  gpu_drm_driver.cpp  kfd_sim_bridge.cpp  kfd_sim_bridge.h
plugins/gpu_driver/drv/kfd/: CMakeLists.txt  amd_shared.h  kfd_crat.h  kfd_device.c  kfd_device_queue_manager.h  kfd_dispatch.c  kfd_dispatch.h  kfd_doorbell.c  kfd_events.c  kfd_events.h  kfd_kernel_queue.h  kfd_migrate.h  kfd_mmu.c  kfd_mmu.h  kfd_module.c  kfd_module.h  kfd_pasid.c  kfd_pasid.h  kfd_priv.h  kfd_process.c  kfd_process.h  kfd_queue.c  kfd_sim_bridge.h  kfd_svm.c  kfd_svm.h  kfd_topology.c  kfd_topology.h  kfd_types.h  kgd_kfd_interface.h
plugins/gpu_driver/hal/: CMakeLists.txt  gpu_hal.h  hal_mock.cpp  hal_mock.h  hal_user.cpp  hal_user.h  test_hal.cpp
plugins/gpu_driver/shared/: gpu_events.h  gpu_ioctl.h  gpu_queue.h  gpu_regs.h  gpu_types.h
plugins/gpu_driver/sim/: CMakeLists.txt  README.md  buddy_allocator.cpp  doorbell_emu.cpp  fence_id.cpp  fence_id.h  fence_sim.cpp  gpu_queue_emu.cpp  gpu_queue_emu.h  graph.cpp  graph.h  hardware_puller_emu.cpp  mem_pool.cpp  mem_pool.h  page_fault_handler.cpp  page_fault_handler.h  page_migration.cpp  page_migration.h  sim_device_va_allocator.cpp  sim_device_va_allocator.h  sim_event.c  sim_event.h  stream_capture.cpp  stream_capture.h
plugins/gpu_driver/sim/hardware/: doorbell_emu.cpp  doorbell_emu.h  hardware_puller_emu.cpp  hardware_puller_emu.h
plugins/gpu_driver/sim/scheduler/: global_scheduler.cpp  global_scheduler.h
plugins/gpu_driver/sim/scheduler/translator/: gpfifo_translator.cpp  gpfifo_translator.h
plugins/net_driver/: CMakeLists.txt
plugins/net_driver/drv/: CMakeLists.txt  net_driver.cpp  net_driver.h  plugin.cpp
plugins/net_driver/sim/: CMakeLists.txt
plugins/storage_driver/: CMakeLists.txt
plugins/storage_driver/drv/: CMakeLists.txt  plugin.cpp  storage_driver.cpp  storage_driver.h
plugins/storage_driver/sim/: CMakeLists.txt
scripts/: check_gpu_ioctl_sync.sh  install-hooks.sh  regression-test.sh  stage-plugin.sh  validate-tag.sh
src/: CMakeLists.txt
src/kernel/: config_manager.cpp  device.cpp  file_ops.cpp  logger.cpp  module.cpp  module_loader.cpp  plugin_manager.cpp  poll_watcher.cpp  service_registry.cpp  vfs.cpp  wait_queue.cpp
src/kernel/block/: bio_compat.cpp
src/kernel/device/: cuda_compat_ioctl.cpp  gpgpu_device.cpp  memory_device.cpp  serial_device.cpp
src/kernel/drm/: drm_file.cpp  drm_gem.cpp  drm_prime.cpp  errno_to_linux.cpp  render_node.cpp
src/kernel/iommu/: ats_protocol.cpp  dma_remap.cpp  invalidate.cpp  ioasid.cpp  iommu_domain.cpp  iommu_emu_state.cpp  iommu_group.cpp  iommu_internal.h  pcie_integration.cpp  vfio_bridge.cpp  vfio_bridge.h
src/kernel/net/: sk_buff.cpp  socket.cpp
src/kernel/pcie/: capability_walk.cpp  config_space.cpp  msi_x.cpp  pcie_emu.cpp  pcie_emu_impl.h
src/kernel/thread/: kernel_thread_base.cpp  kernel_workqueue.cpp
src/kernel/uvm/: fault_inject.cpp  hmm_range.cpp  migrate.cpp  mm_shim.cpp  mmu_notifier.cpp  page_state_machine.cpp  zone_device.cpp
tests/: CMakeLists.txt  catch_amalgamated.cpp  error-inject-coverage.md  test_ats_protocol_standalone.cpp  test_compat_cdev.cpp  test_compat_memory.cpp  test_compat_module.cpp  test_compat_sync.cpp  test_compat_types.cpp  test_config_space_standalone.cpp  test_dma_remap_standalone.cpp  test_doorbell_emu.cpp  test_drm_file_lifecycle_standalone.cpp  test_drm_file_standalone.cpp  test_drm_gem_standalone.cpp  test_drm_ioctl_dispatch_standalone.cpp  test_drm_ioctl_standalone.cpp  test_drm_kfd_handlers_standalone.cpp  test_drm_mode_config_standalone.cpp  test_drm_prime_lifecycle_standalone.cpp  test_drm_prime_standalone.cpp  test_error_inject_standalone.cpp  test_fault_inject_standalone.cpp  test_fence_id_lifecycle_standalone.cpp  test_get_process_aperture_runtime_standalone.cpp  test_global_scheduler.cpp  test_gpfifo_translator.cpp  test_gpu_callback_integration.cpp  test_gpu_driver_client_phase31_standalone.cpp  test_gpu_fence_return.cpp  test_gpu_ioctl.cpp  test_gpu_ioctl_number.cpp  test_gpu_memory.cpp  test_gpu_mempool_export.cpp  test_gpu_mmap.cpp  test_gpu_mmap_and_submit.cpp  test_gpu_mmap_bar.cpp  test_gpu_plugin.cpp  test_gpu_pushbuffer_validation.cpp  test_gpu_register.cpp  (+70 more)
tests/perf/: CMakeLists.txt  README.md  ioctl_dispatch_bench.cpp  mmap_overhead_bench.cpp  perf_fixture.h  pushbuffer_bench.cpp
tests/poc/: test_userfaultfd_poc.cpp
tools/: docs-audit.sh  verify_symlinks.sh
tools/cli/: CMakeLists.txt  main.cpp
(+564 files in other folders)
